--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -19,7 +19,7 @@
 
     <div *ngIf="loggedIn()" class="dropdown">
         <a class="dropdown-toggle text-light">
-          Welcome User
+          Welcome {{authSevice.decodedToken.unique_name | titlecase}}
         </a>
       
         <div class="dropdown-menu">
