UserUpdate from api and UI done

--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -20,8 +20,8 @@
           Welcome {{authSevice.decodedToken.unique_name | titlecase}}
         </a>
       
-        <div class="dropdown-menu mt-3" *dropdownMenu>
-          <a class="dropdown-item" href="#">
+        <div class="dropdown-menu mt-3" *dropdownMenu>  
+          <a class="dropdown-item" [routerLink]="['/member/edit']">
             <i class="fa fa-user"></i> Edit Profile
           </a>
           <div class="dropdown-divider"></div>
