--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -57,7 +57,8 @@
                 </form>
             </tab>
             <tab heading="Edit Photos">
-              <p>Photo Edit Will go here</p>
+              <app-photo-editor [photos]="user.photos" 
+              (getMemberPhotoChange)="updateMainPhoto($event)"></app-photo-editor>
             </tab>
         </tabset>
       </div>
