--- a/DatingApp-SPA/src/app/nav/nav.component.css
+++ b/DatingApp-SPA/src/app/nav/nav.component.css
@@ -3,3 +3,10 @@
 .dropdown-item {
     cursor: pointer;
 }
+
+img {
+    max-width: 50px;
+    border: 2px solid white;
+    border-radius: 50%;
+    display: inline;
+}
